@@ -1241,6 +1241,148 @@ FpX_rem(GEN x, GEN T, GEN p)
   }
 }
 
+static GEN
+deg2pol_shallow(GEN x2, GEN x1, GEN x0, long v)
+{
+  GEN x = cgetg(5,t_POL);
+  x[1] = evalsigne(1) | evalvarn(v);
+  gel(x,2) = x0;
+  gel(x,3) = x1;
+  gel(x,4) = x2;
+  return normalizepol_lg(x,5);
+}
+
+static GEN
+FpV_producttree(GEN xa, GEN p, long vs)
+{
+  long n = lg(xa)-1;
+  long m = expu(n-1)+1;
+  GEN T = cgetg(m+1, t_VEC), t;
+  long i, j, k;
+  t = cgetg(((n+1)>>1)+1, t_VEC);
+  for (j=1, k=1; k<n; j++, k+=2)
+    gel(t, j) = deg2pol_shallow(gen_1,
+                Fp_neg(Fp_add(gel(xa,k), gel(xa,k+1), p), p),
+                Fp_mul(gel(xa,k), gel(xa,k+1), p), vs);
+  if (k==n) gel(t, j) = deg1pol(gen_1, Fp_neg(gel(xa,k), p), vs);
+  gel(T,1) = t;
+  for (i=2; i<=m; i++)
+  {
+    GEN u = gel(T, i-1);
+    long n = lg(u)-1;
+    t = cgetg(((n+1)>>1)+1, t_VEC);
+    for (j=1, k=1; k<n; j++, k+=2)
+      gel(t, j) = FpX_mul(gel(u, k), gel(u, k+1), p);
+    if (k==n) gel(t, j) = gel(u, k);
+    gel(T, i) = t;
+  }
+  return T;
+}
+
+static GEN
+FpX_FpV_multieval_tree(GEN P, GEN xa, GEN T, GEN p)
+{
+  pari_sp av = avma;
+  long i,j,k;
+  long m = lg(T)-1, n = lg(xa)-1;
+  GEN t;
+  GEN Tp = cgetg(m+1, t_VEC);
+  gel(Tp, m) = mkvec(P);
+  for (i=m-1; i>=1; i--)
+  {
+    GEN u = gel(T, i);
+    GEN v = gel(Tp, i+1);
+    long n = lg(u)-1;
+    t = cgetg(n+1, t_VEC);
+    for (j=1, k=1; k<n; j++, k+=2)
+    {
+      gel(t, k)   = FpX_rem(gel(v, j), gel(u, k), p);
+      gel(t, k+1) = FpX_rem(gel(v, j), gel(u, k+1), p);
+    }
+    if (k==n) gel(t, k) = gel(v, j);
+    gel(Tp, i) = t;
+  }
+  {
+    GEN R = cgetg(n+1, t_VEC);
+    GEN u = gel(T, i+1);
+    GEN v = gel(Tp, i+1);
+    long l = lg(u)-1;
+    for (j=1, k=1; j<=l; j++)
+    {
+      long c, d = degpol(gel(u,j));
+      for (c=1; c<=d; c++, k++)
+        gel(R,k) = FpX_eval(gel(v, j), gel(xa,k), p);
+    }
+    return gerepileupto(av, R);
+  }
+}
+
+static GEN
+FpVV_polint_tree(GEN T, GEN R, GEN xa, GEN ya, GEN p, long vs)
+{
+  pari_sp av = avma;
+  long m = lg(T)-1, n = lg(ya)-1;
+  long i,j,k;
+  GEN Tp = cgetg(m+1, t_VEC);
+  GEN t = cgetg(lg(gel(T,1)), t_VEC);
+  for (j=1, k=1; k<n; j++, k+=2)
+  {
+    GEN a = Fp_mul(gel(ya,k), gel(R,k), p), b = Fp_mul(gel(ya,k+1), gel(R,k+1), p);
+    gel(t, j) = deg1pol(Fp_add(a, b, p),
+                Fp_neg(Fp_add(Fp_mul(gel(xa,k), b, p ),
+                              Fp_mul(gel(xa,k+1), a, p), p), p), vs);
+  }
+  if (k==n) gel(t, j) = scalarpol(Fp_mul(gel(ya,k), gel(R,k), p), vs);
+  gel(Tp, 1) = t;
+  for (i=2; i<=m; i++)
+  {
+    GEN u = gel(T, i-1);
+    GEN t = cgetg(lg(gel(T,i)), t_VEC);
+    GEN v = gel(Tp, i-1);
+    long l = lg(v)-1;
+    for (j=1, k=1; k<l; j++, k+=2)
+      gel(t, j) = FpX_add(ZX_mul(gel(u, k), gel(v, k+1)),
+                          ZX_mul(gel(u, k+1), gel(v, k)), p);
+    if (k==l) gel(t, j) = gel(v, k);
+    gel(Tp, i) = t;
+  }
+  return gerepilecopy(av, gmael(Tp,m,1));
+}
+
+GEN
+FpX_FpV_multieval(GEN P, GEN xa, GEN p)
+{
+  pari_sp av = avma;
+  GEN T = FpV_producttree(xa, p, P[1]);
+  return gerepileupto(av, FpX_FpV_multieval_tree(P, xa, T, p));
+}
+
+GEN
+FpV_polint(GEN xa, GEN ya, GEN p, long vs)
+{
+  pari_sp av = avma;
+  GEN T = FpV_producttree(xa, p, vs);
+  long m = lg(T)-1;
+  GEN P = FpX_deriv(gmael(T, m, 1), p);
+  GEN R = FpV_inv(FpX_FpV_multieval_tree(P, xa, T, p), p);
+  return gerepileupto(av, FpVV_polint_tree(T, R, xa, ya, p, vs));
+}
+
+GEN
+FpV_FpVV_polint(GEN xa, GEN ya, GEN p, long vs)
+{
+  pari_sp av = avma;
+  GEN T = FpV_producttree(xa, p, vs);
+  long m = lg(T)-1, l = lg(ya)-1;
+  long i;
+  GEN P = FpX_deriv(gmael(T, m, 1), p);
+  GEN R = FpV_inv(FpX_FpV_multieval_tree(P, xa, T, p), p);
+  GEN M = cgetg(l+1, t_VEC);
+  for (i=1; i<=l; i++)
+    gel(M,i) = FpVV_polint_tree(T, R, xa, gel(ya,i), p, vs);
+  return gerepileupto(av, M);
+}
+
 /***********************************************************************/
 /**                                                                   **/
 /**                              FpXQ                                 **/
