@@ -516,7 +516,9 @@ GEN     random_FpXQE(GEN a4, GEN a6, GEN T, GEN p);
 int     Fp_issquare(GEN x, GEN p);
 GEN     Fp_FpX_sub(GEN x, GEN y, GEN p);
 GEN     Fp_FpXQ_log(GEN a, GEN g, GEN ord, GEN T, GEN p);
+GEN     FpV_FpVV_polint(GEN xa, GEN ya, GEN p, long vs);
 GEN     FpV_inv(GEN x, GEN p);
+GEN     FpV_polint(GEN xa, GEN ya, GEN p, long v);
 GEN     FpV_roots_to_pol(GEN V, GEN p, long v);
 GEN     FpX_Fp_add(GEN x, GEN y, GEN p);
 GEN     FpX_Fp_add_shallow(GEN y,GEN x,GEN p);
@@ -525,6 +527,7 @@ GEN     FpX_Fp_mul_to_monic(GEN y,GEN x,GEN p);
 GEN     FpX_Fp_mulspec(GEN y,GEN x,GEN p,long ly);
 GEN     FpX_Fp_sub(GEN x, GEN y, GEN p);
 GEN     FpX_Fp_sub_shallow(GEN y,GEN x,GEN p);
+GEN     FpX_FpV_multieval(GEN P, GEN xa, GEN p);
 GEN     FpX_FpXQ_eval(GEN f,GEN x,GEN T,GEN p);
 GEN     FpX_FpXQV_eval(GEN f,GEN x,GEN T,GEN p);
 GEN     FpX_Frobenius(GEN T, GEN p);
@@ -3779,7 +3782,6 @@ GEN     Flx_ffisom(GEN P,GEN Q,ulong l);
 GEN     Flx_roots_naive(GEN f, ulong p);
 GEN     FlxX_resultant(GEN u, GEN v, ulong p, long sx);
 GEN     Flxq_ffisom_inv(GEN S,GEN Tp, ulong p);
-GEN     FpV_polint(GEN xa, GEN ya, GEN p, long v);
 GEN     FpX_FpXY_resultant(GEN a, GEN b0, GEN p);
 GEN     FpX_factorff_irred(GEN P, GEN Q, GEN p);
 void    FpX_ffintersect(GEN P,GEN Q,long n,GEN l,GEN *SP,GEN *SQ,GEN MA,GEN MB);
