@@ -223,7 +223,8 @@ BA  5- [libpari] New functions family RgXn: new functions RgXnV_red_shallow,
        RgXn_powers, RgX_RgXnV_eval, RgX_RgXn_eval, RgXn_reverse, RgXn_inv,
        RgXn_exp
 BA  6- [libpari] New functions Flv_inv
-BA  7- [libpari] New functions Flx_Flv_eval, Flv_FlvV_polint
+BA  7- [libpari] New functions Flx_Flv_eval, Flv_FlvV_polint,
+                               FpX_FpV_eval, FpV_FpVV_polint
 WH  8- [libpari] New low-level functions get_Fl_inv, remll_pre
 BA  9- [libpari] New low-level functions Fl_sqr_pre, Fl_mul_pre, remlll_pre,
        Fl_powu_pre, Fl_sqrt_pre, divll_pre, random_Fle_pre
